--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+!**/src/main/**/target/
+!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -12,8 +12,6 @@ target/
 .settings
 .springBeans
 .sts4-cache
-.attach_pid4681
-.attach_pid75430
 
 ### IntelliJ IDEA ###
 .idea
@@ -28,9 +26,8 @@ target/
 /nbdist/
 /.nb-gradle/
 build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
-
-### Script sh ###
-*.sh
