Added packaging in war.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.br</groupId>
 	<artifactId>spring-document-2-latex-converter</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>spring-document-2-latex-converter</name>
 	<description>Demo project for Spring Boot</description>
 
